replace yacl with own implementation